--- a/2-Planar-Quadrotor.ipynb
+++ b/2-Planar-Quadrotor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "id": "f6929dba-17b6-473b-963a-53aba59803ce",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "69fdac41-7f60-405b-8fb6-9900be526ce4",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "id": "c797ab0a-3a63-46b7-b275-42882f603da9",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "id": "979e816b-7fd5-4ab0-bbf9-68d63d15c1d0",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "id": "5992a5d3-4711-4ef5-a9bc-6fd3cfabed10",
    "metadata": {},
    "outputs": [],
@@ -159,44 +159,50 @@
     "    def rotor_thrust_model(rotor_rates: np.ndarray) -> np.ndarray:\n",
     "        # NOTE(roy): Implement the simple rotor trust model we discussed in the slides\n",
     "        # (For fun) to see how complex this can get, see for example: https://arxiv.org/pdf/1601.00733.pdf\n",
-    "        raise NotImplementedError(\"Rotor model not implemented!\")\n",
+    "        return p.k_thrust * rotor_rates ** 2\n",
     "\n",
     "    def step(self, t: float, input: QuadrotorCommands) -> QuadrotorState:\n",
     "        # NOTE(roy) Use only the first two rotor rates!\n",
     "        F1, F2 = PlanarQuadrotorDynamics.rotor_thrust_model(input.rotor_rates[:2])\n",
     "\n",
     "        # NOTE(roy) Implement the thrust/torque calculation we discussed in the slides\n",
-    "        u1 = 0.0\n",
-    "        u2 = 0.0\n",
-    "        raise NotImplementedError(\"Thrust/torque calculation not implemented!\")\n",
+    "        u1 = F1 + F2\n",
+    "        u2 = (F1 - F2) * p.arm_length\n",
     "\n",
     "        # NOTE(roy) this local function is a wrapper around the class state_derivative function\n",
     "        # all this does is convert the our state dataclass from/into a vector that the scipy\n",
     "        # integration solver can work with. See dynamics.py for the definition of these\n",
     "        # from/to state vector functions.\n",
     "        def state_derivative(t: float, state: np.ndarray) -> np.ndarray:\n",
-    "            return PlanerQuadrotorDynamics.state_derivative(\n",
+    "            return PlanarQuadrotorDynamics.state_derivative(\n",
     "                QuadrotorState.from_state_vector(state),\n",
     "                u1,\n",
     "                u2,\n",
     "            ).to_state_vector()\n",
     "\n",
     "        state_vector = self.state.to_state_vector()\n",
-    "        raise NotImplementedError(\"Use the scipy function solve_ivp to integrate to the next timestep\")\n",
     "\n",
-    "        solution = {}  # NOTE(roy) solution = sp.integrate.solve_ivp(....\n",
+    "        solution = sp.integrate.solve_ivp(\n",
+    "            fun = state_derivative,\n",
+    "            t_span = [0, self.dt],\n",
+    "            y0 = state_vector,\n",
+    "            method = 'RK45'\n",
+    "        )\n",
+    "            # NOTE(roy) solution = sp.integrate.solve_ivp(....\n",
     "\n",
     "        self.state = QuadrotorState.from_state_vector(solution['y'][:, -1])\n",
     "        return self.state\n",
     "\n",
     "    @staticmethod\n",
     "    def state_derivative(state: QuadrotorState, u1: float, u2: float) -> QuadrotorState:\n",
-    "        raise NotImplementedError(\"State derivative not implemented!\")\n",
-    "\n",
+    "        \n",
     "        # NOTE(roy) compute the relevant values here! Note that we're using only the x- and z dimensions for translation\n",
     "        # and only the y-axis for rotation for this planar model.\n",
-    "        accel = np.zeros(3)\n",
-    "        angular_accel = np.zeros(3)\n",
+    "        \n",
+    "        phi = state.orientation.to_yaw_pitch_roll()[1]\n",
+    "        \n",
+    "        accel = np.array([-np.sin(phi) / p.mass * u1, 0, np.cos(phi) / p.mass * u1 - p.g])\n",
+    "        angular_accel = np.array([ 0, u2 / p.inertia, 0])\n",
     "\n",
     "        # NOTE(roy) this might look a little confusing at first glance, but we're populating DERIVATIVES\n",
     "        # of the state here! So position -> velocity, velocity -> acceleration, etc...\n",
@@ -214,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "id": "fdfb7d18-cc55-49ce-874f-852525c8a8a7",
    "metadata": {},
    "outputs": [],
@@ -225,12 +231,12 @@
     "\n",
     "class EmptyController(ControllerBase):\n",
     "    def step(self, *args) -> QuadrotorCommands:\n",
-    "        return QuadrotorCommands(np.zeros(4))  # Just zero rotor rates"
+    "        return QuadrotorCommands(np.array([600, 600]))  # Just zero rotor rates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "id": "10652209-5106-4a73-8f1e-463b42754f10",
    "metadata": {},
    "outputs": [],
@@ -243,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "id": "d31b24c5-3603-451d-bf4c-c3565b8573ce",
    "metadata": {},
    "outputs": [],
@@ -270,17 +276,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "id": "03051909-87b1-42d1-ba99-27190b8bf041",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b2f937f5d8cf480e8e1e06f37a054b2d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# NOTE(roy) play with this variable and see what happens!\n",
     "initial_state = QuadrotorState(\n",
     "    position=np.zeros(3),\n",
-    "    velocity=np.zeros(3),\n",
+    "    velocity=np.array([0, 0, 0]),\n",
     "    orientation=Rot3.from_yaw_pitch_roll(0, 0, 0),\n",
-    "    angular_velocity=np.zeros(3),\n",
+    "    angular_velocity=np.array([0, 0, 0]),\n",
     ")\n",
     "\n",
     "run_and_render(initial_state, 1.0)"
@@ -334,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
