--- a/1-introduction.ipynb
+++ b/1-introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "29c98e8e-df0a-4452-8006-d483bbe8c528",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "bfc79d94-86f6-4ac1-8dbb-8020739506e7",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b5a1ddd1-0644-4c4f-afa0-e05f51b5dd8e",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "edee62a3-a972-4e7a-a641-c2aa02e9b417",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b66a554b-04c7-48c9-be2e-87750a3db939",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "97ab061d-2dd4-45df-be50-6c571dff463d",
    "metadata": {},
    "outputs": [],
@@ -161,11 +161,13 @@
     "        super().__init__()\n",
     "        self.desired_position = desired_position\n",
     "\n",
-    "    def step(self, t, input):\n",
+    "    def step(self, t: float, input):\n",
     "        # This is for you to implement!\n",
     "        # Return a QuadrotorState object (see the quadrotor/dynamics.py) with\n",
     "        # the position set to the class variable 'desired_position'\n",
-    "        raise NotImplementedError(\"For you to implement!\")\n",
+    "        return QuadrotorState(\n",
+    "            position=self.desired_position,\n",
+    "        )\n",
     "        \n",
     "    # This is for you to implement!\n",
     "    # Make sure you can pass a desired position to this class"
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "918c635e-62c2-40c9-90a8-8ae8404b4f01",
    "metadata": {},
    "outputs": [],
@@ -193,12 +195,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e5f427f8-a5cb-450c-b1c7-089f00c009f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "desired_position = np.array([1, 0, -1])  # You can set this to anything you like!\n",
+    "desired_position = np.array([5, 5, -4])  # You can set this to anything you like!\n",
     "\n",
     "t_total = 10.0  # This is how long the simulation runs in seconds\n",
     "\n",
@@ -225,10 +227,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "9207ff9a-4b40-4460-8fd3-1513625eb4a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "927a7f8daeda4dacab336a326120a2d8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# This might be slow to run the first try!\n",
     "from quadrotor.renderer import animate_k3d\n",
@@ -239,6 +256,14 @@
     "plot.display()\n",
     "plot.start_auto_play()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "165a6361-25ba-4642-a8c4-f657bdd964e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -257,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
